modulo03/ejercicio03/01-deploy-todo-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-todo-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-front
  template:
    metadata:
      labels:
        app: todo-front
    spec:
      containers:
        - name: todo-front
          image: todo-front:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 80
