modulo03/ejercicio03/04-deployment-todo-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-todo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-api
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      containers:
        - name: todo-api
          image: todo-api:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 3000
