modulo03/ejercicio03/02-clusterip-todo-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-front-service
spec:
  selector:
    app: todo-front
  ports:
    - name: todo-front-port
      port: 80
      targetPort: todo-front
  type: ClusterIP
