modulo03/ejercicio03/05-clusterip-todo-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-service
spec:
  selector:
    app: todo-api
  ports:
    - name: todo-api-port
      port: 3000
      targetPort: todo-api
  type: ClusterIP
