modulo03/ejercicio03/06-ingress-todo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: lc-todo.edu
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todo-api
                port:
                  name: api
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-front
                port:
                  name: front
